[FIX] 코드 래빗 피드백 수정